feat: Update project metadata and dependencies
Refines the project name to "Manovratha Sanctuary" and updates meta tags in `index.html` to better reflect the application's focus and purpose. Also includes `vercel.json` for improved deployment configuration and streamlines dependencies in `package.json`.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manovratha | Holistic Mental Health Ecosystem</title>
+    <title>Manovratha | Holistic Mental Health Ecosystem & Sanctuary</title>
+    
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Manovratha | Holistic Mental Health Ecosystem">
+    <meta name="description" content="A specialized global sanctuary for mental health professionals, students, and institutions. Empowering minds through clinical excellence and tech-driven wellness.">
+    <meta name="keywords" content="Mental Health, Clinical Supervision, Practitioner Wellness, Corporate Wellness, Mental Health Tech, Manovratha">
+    
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://manovratha.in/">
+    <meta property="og:title" content="Manovratha | Holistic Mental Health Ecosystem">
+    <meta property="og:description" content="A specialized sanctuary for mental health professionals. Join our clinical collective.">
+    <meta property="og:image" content="logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://manovratha.in/">
+    <meta property="twitter:title" content="Manovratha | Holistic Mental Health Ecosystem">
+    <meta property="twitter:description" content="A specialized sanctuary for mental health professionals. Join our clinical collective.">
+    <meta property="twitter:image" content="logo.png">
+
+    <link rel="icon" type="image/png" href="logo.png">
+
+    <!-- Styles & Fonts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
